# AITranslationEngineJP

./: .env.example  .gitignore  .go-arch-lint.yml  .golangci.yml  .gomodguard.yaml  .oxlintrc.json  AGENTS.md  eslint.config.mjs  go.mod  go.sum  index.html  knip.config.mjs  knip.json  main.go  package-lock.json  package.json  playwright.config.ts  sonar-project.properties  tsconfig.json  vite.config.mjs  vite.config.ts  wails.json
.codex/: README.md  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_execution_cache_base.sql  0002_master_dictionary_foundation.sql  0003_job_persona_entry_foundation.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: mod.rs
src-tauri/src/domain/: bootstrap_status.rs  mod.rs  xedit_export.rs
src-tauri/src/gateway/: commands.rs
src-tauri/src/infra/: execution_cache.rs  job_repository.rs  mod.rs  plugin_export_repository.rs  runtime_info.rs  xedit_export_importer.rs
src-tauri/tests/: acceptance.rs  dictionary_rebuild_validation.rs  embedded_elements_regression.rs  execution_observe_snapshot_validation.rs  import_job_transport_contract.rs  import_xedit_export_persistence.rs  job_create_contract.rs  job_list_contract.rs  job_state_contract.rs  persona_rebuild_validation.rs  translation_flow_mvp_regression.rs  translation_instruction_builder_contract.rs  translation_preview_contract.rs  translation_unit_contract.rs  xedit_export_importer.rs  xtranslator_importer.rs
src-tauri/tests/fixtures/: xedit-export-empty-editor-id.json  xedit-export-minimal.json  xedit-export-missing-target-plugin.json  (+1 more)
(+1604 files in other folders)
