[package]
name = "ai_translation_engine_jp"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_translation_engine_jp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "migrate", "macros"] }
tauri = { version = "2.0.0", features = [] }
tokio = { version = "1", features = ["macros", "rt"] }
